--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,11 @@
   text-align: center;
   font-family: monospace;
 }
+
+h1 {
+  font-size: 10vmin !important;
+}
+
+.results {
+  font-size: 4vmin;
+}
