--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,10 +8,13 @@
         <% end  %>
       </div>
         <form action="/score" method="post" data-turbo="false">
-          <input type="text" name="word" placeholder="Type a word containing only letters above.">
-          <input type="submit" value="Play">
-          <%= hidden_field_tag 'arbys', 'VUBJKB23UIVI1UU1VOBVI@' %>
+          <div class="input-group mb-3">
+            <input type="text" name="word" class="form-control" placeholder="Spell a word from above letters." aria-label="New Word" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Play</button>
+          </div>
+          <%= hidden_field_tag 'letters', @letters %>
           <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         </form>
+
     </div>
   </div>
